
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int dsl_pool_t ;
typedef int dsl_dataset_t ;
typedef int ds_hold_flags_t ;
typedef int boolean_t ;


 int EBUSY ;
 int SET_ERROR (int ) ;
 int dsl_dataset_hold_flags (int *,char const*,int ,void*,int **) ;
 int dsl_dataset_rele_flags (int *,int ,void*) ;
 int dsl_dataset_tryown (int *,void*,int ) ;

__attribute__((used)) static int
dsl_dataset_own_impl(dsl_pool_t *dp, const char *name, ds_hold_flags_t flags,
    void *tag, boolean_t override, dsl_dataset_t **dsp)
{
 int err = dsl_dataset_hold_flags(dp, name, flags, tag, dsp);
 if (err != 0)
  return (err);
 if (!dsl_dataset_tryown(*dsp, tag, override)) {
  dsl_dataset_rele_flags(*dsp, flags, tag);
  return (SET_ERROR(EBUSY));
 }
 return (0);
}
