; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_dataset.c_dsl_dataset_own_impl.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_dataset.c_dsl_dataset_own_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, i8*, i32, i32**)* @dsl_dataset_own_impl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dsl_dataset_own_impl(i32* %0, i8* %1, i32 %2, i8* %3, i32 %4, i32** %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32**, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32** %5, i32*** %13, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load i32, i32* %10, align 4
  %18 = load i8*, i8** %11, align 8
  %19 = load i32**, i32*** %13, align 8
  %20 = call i32 @dsl_dataset_hold_flags(i32* %15, i8* %16, i32 %17, i8* %18, i32** %19)
  store i32 %20, i32* %14, align 4
  %21 = load i32, i32* %14, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %6
  %24 = load i32, i32* %14, align 4
  store i32 %24, i32* %7, align 4
  br label %41

25:                                               ; preds = %6
  %26 = load i32**, i32*** %13, align 8
  %27 = load i32*, i32** %26, align 8
  %28 = load i8*, i8** %11, align 8
  %29 = load i32, i32* %12, align 4
  %30 = call i32 @dsl_dataset_tryown(i32* %27, i8* %28, i32 %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %40, label %32

32:                                               ; preds = %25
  %33 = load i32**, i32*** %13, align 8
  %34 = load i32*, i32** %33, align 8
  %35 = load i32, i32* %10, align 4
  %36 = load i8*, i8** %11, align 8
  %37 = call i32 @dsl_dataset_rele_flags(i32* %34, i32 %35, i8* %36)
  %38 = load i32, i32* @EBUSY, align 4
  %39 = call i32 @SET_ERROR(i32 %38)
  store i32 %39, i32* %7, align 4
  br label %41

40:                                               ; preds = %25
  store i32 0, i32* %7, align 4
  br label %41

41:                                               ; preds = %40, %32, %23
  %42 = load i32, i32* %7, align 4
  ret i32 %42
}

declare dso_local i32 @dsl_dataset_hold_flags(i32*, i8*, i32, i8*, i32**) #1

declare dso_local i32 @dsl_dataset_tryown(i32*, i8*, i32) #1

declare dso_local i32 @dsl_dataset_rele_flags(i32*, i32, i8*) #1

declare dso_local i32 @SET_ERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
